feat(activities): add activities post and get routes
