# src/main/java/com/example/FacProject/entities/ActivityTypeEnum.java
@@ -1,0 +1,5 @@
+package com.example.FacProject.entities;
+
+public enum ActivityTypeEnum {
+    MEETING, TRAINING, OTHER
+}
