# src/main/java/com/example/FacProject/entities/AttendanceStatusEnum.java
@@ -1,0 +1,5 @@
+package com.example.FacProject.entities;
+
+public enum AttendanceStatusEnum {
+    MISSING, ATTENDED, UNDEFINED
+}
