# src/main/java/com/example/FacProject/entities/MonthlyRecurrenceRule.java
@@ -1,0 +1,25 @@
+package com.example.FacProject.entities;
+
+public class MonthlyRecurrenceRule {
+    private Integer weekOrdinal;
+    private DayOfWeekEnum dayOfWeek;
+
+    public MonthlyRecurrenceRule() {
+    }
+
+    public Integer getWeekOrdinal() {
+        return weekOrdinal;
+    }
+
+    public void setWeekOrdinal(Integer weekOrdinal) {
+        this.weekOrdinal = weekOrdinal;
+    }
+
+    public DayOfWeekEnum getDayOfWeek() {
+        return dayOfWeek;
+    }
+
+    public void setDayOfWeek(DayOfWeekEnum dayOfWeek) {
+        this.dayOfWeek = dayOfWeek;
+    }
+}
