# src/main/resources/static/docs/openapiexam.yaml
@@ -9,7 +9,8 @@ info:
     - v0.0.3 (2026-04-23) : New features about membership fees, collectivities transactions and its financial accounts, and members payments.
     - v0.0.4 (2026-04-23) : GET /collectivities/{id} and  GET /collectivities/{id}/financialAccounts
     - v0.0.5 (2026-05-05) : Partial features collectivity statistics.
-  version: 0.0.5
+    - v0.0.6 (2026-05-05) : New features about collectivities activities and assiduity.
+  version: 0.0.6
 servers:
   - url: 'https://localhost:8080'
 paths:
@@ -277,6 +278,10 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/CollectivityLocalStatistics'
+        '400':
+          description: Mandatory query parameters not provided or malformed.
+        '404':
+          description: Collectivity not found
   '/collectivites/statistics':
     get:
       summary: Get collectivities overall statistics
@@ -305,8 +310,179 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/CollectivityOverallStatistics'
+  '/collectivities/{id}/activities':
+    get:
+      summary: Retrieve existing collectivity activities
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+          required: true
+      responses:
+        '200':
+          description: List of collectivity activities
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/CollectivityActivity'
+        '400':
+          description: Mandatory query parameters not provided or malformed.
+        '404':
+          description: Collectivity not found
+    post:
+      summary: Add activities to specific collectivity
+      description: |
+        Note that either executive date or recurrence rule can be provided at same time, not both.
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+          required: true
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                $ref: '#/components/schemas/CreateCollectivityActivity'
+      responses:
+        '200':
+          description: List of added collectivity activities
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/CollectivityActivity'
+        '400':
+          description: Both recurrence rule and executive date provided, or provided data malformed inside payload.
+        '404':
+          description: Collectivities not found
+  '/collectivities/{id}/activities/{activityId}/attendance':
+    parameters:
+      - in: path
+        name: id
+        schema:
+          type: string
+        required: true
+      - in: path
+        name: activityId
+        schema:
+          type: string
+        required: true
+    post:
+      summary: Confirm members attendance to an existing collectivity activity
+      description: |
+        Note that a member attendance status (MISSING or ATTENDED) can not be updated once set.
+        Only, UNDEFINED status can be then updated.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                $ref: '#/components/schemas/CreateActivityMemberAttendance'
+      responses:
+        '201':
+          description: List of activity member attendance created
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ActivityMemberAttendance'
+        '400':
+          description: Either malformed provided data through request body or already confirmed attendance for any of provided member
+        '404':
+          description: Either collectivity not found or activity not found
+    get:
+      summary: Get members attendance to an existing collectivity activity
+      description: |
+        Note that return attendance must include UNDEFINED, ATTENDED or MISSING members. 
+        UNDEFINED and MISSING status are only set for members of the collectivity, that are concerned by their occupation set for the activity.
+        For other members outside collectivity, they can only set ATTENDED status. Same for members inside collectivity, that are not concerned to be required to be present.
+      responses:
+        '201':
+          description: List of activity member attendance including other members
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ActivityMemberAttendance'
+        '404':
+          description: Either collectivity not found or activity not found
 components:
   schemas:
+    ActivityMemberAttendance:
+      type: object
+      properties:
+        id:
+          type: string
+        memberDescription:
+          $ref: '#/components/schemas/MemberDescription'
+        attendanceStatus:
+          $ref: '#/components/schemas/AttendanceStatus'
+    CreateActivityMemberAttendance:
+      type: object
+      properties:
+        memberIdentifier:
+          type: string
+        attendanceStatus:
+          $ref: '#/components/schemas/AttendanceStatus'
+    AttendanceStatus:
+      type: string
+      enum:
+        - MISSING
+        - ATTENDED
+        - UNDEFINED
+    MonthlyRecurrenceRule:
+      type: object
+      properties:
+        weekOrdinal:
+          type: integer
+          minimum: 1
+          maximum: 5
+          description: >
+            Week position in a month.
+            1 = 1st week, 2 = 2nd week, … 5 = 5th week (if exists).
+        dayOfWeek:
+          type: string
+          enum: [ MO, TU, WE, TH, FR, SA, SU ]
+          description: Day of week.
+      example:
+        weekOrdinal: 3
+        dayOfWeek: SA   # 3rd Saturday of each month
+    CreateCollectivityActivity:
+      type: object
+      properties:
+        label:
+          type: string
+        activityType:
+          type: string
+          enum:
+            - MEETING
+            - TRAINING
+            - OTHER
+        memberOccupationConcerned:
+          type: array
+          items:
+            $ref: '#/components/schemas/MemberOccupation'
+        recurrenceRule:
+          $ref: '#/components/schemas/MonthlyRecurrenceRule'
+        executiveDate:
+          type: string
+          format: date
+    CollectivityActivity:
+      allOf:
+        - $ref: '#/components/schemas/CreateCollectivityActivity'
+      properties:
+        id:
+          type: string
     CreateCollectivity:
       type: object
       properties:
